added authorization. right now it requires typing into the url. still working on making authorization links functional
